# BlazeRenderer

./: CMakeLists.txt  README.md
data/: bonsai.nhdr  credits.txt  engine.nhdr  tooth.nhdr
res/: icons.qrc  shaders.qrc
shaders/: cube.fs  cube.vs
src/: defines.h  main.cpp
src/algorithm/: volumemanager.cpp  volumemanager.h
src/ui/: dialog1dtransferfunction.cpp  dialog1dtransferfunction.h  dialog1dtransferfunction.ui  dialograycastingsettings.cpp  dialograycastingsettings.h  dialograycastingsettings.ui  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  trackball.cpp  trackball.h
